fixed padding on scroll-maintained header visibility on jump

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,12 +7,24 @@ $black: #000;
 $maroon: #83333e;
 $off-white: #f2f4f5;
 
-html,
-body {
+
+// html {
+  // --top-spacing: 100px;
+  // scroll-padding-top: var(--top-spacing);
+  // font-family: $font;
+  // font-size: 16px;
+  // padding: 0;
+  // margin: 0;
+// }
+
+html, body {
+  --top-spacing: 70px;
+  scroll-padding-top: var(--top-spacing);
+  margin: var(--top-spacing) auto;
   font-family: $font;
   font-size: 16px;
-  padding: 0;
-  margin: 0;
+  // padding: 0;
+  // margin: 0;
 }
 
 //very basic container - can change later
@@ -42,6 +54,8 @@ header {
   position: fixed;
   top: 0px;
   z-index: 10;
+  //might have added padding 2px today 2/28 not sure, can takeaway
+  // padding: 2px;
   background-color: $off-white;
   .inner-header {
     display: flex;
